Bug 161215 - FILEOPEN DOCX Endless loop upon opening specific file with floating tables
Summary: FILEOPEN DOCX Endless loop upon opening specific file with floating tables
Status: CLOSED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.6.0.3 release
Hardware: All All
: medium normal
Assignee: Michael Stahl
URL:
Whiteboard: target:24.8.0 target:24.2.5 target:25...
Keywords: bibisected, bisected, regression
Depends on:
Blocks: DOCX-Floatingtable
  Show dependency treegraph
 
Reported: 2024-05-22 12:16 UTC by Gabor Kelemen (Collabora)
Modified: 2025-03-25 16:55 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
Example user made file (99.92 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2024-05-22 12:16 UTC, Gabor Kelemen (Collabora)
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Gabor Kelemen (Collabora) 2024-05-22 12:16:45 UTC
Created attachment 194272 [details]
Example user made file

Attached user made / minimized file contains several tables, including some floating ones.

Opening it started to endless loop in

https://git.libreoffice.org/core/+/ce3308a926f036b87515b8cd97d2b197063dc77a

commit ce3308a926f036b87515b8cd97d2b197063dc77a	[log]
author	Miklos Vajna <vmiklos@collabora.com>	Wed Apr 12 08:13:07 2023 +0200
committer	Miklos Vajna <vmiklos@collabora.com>	Wed Apr 12 09:12:17 2023 +0200
tree 54362c2e47d0f297e489deebcd1d5ee0e188939a
parent 31b365d1fe49eb71409ff78ff3fbcc7fface4040 [diff]

tdf#61594 sw floattable: import floating tables as split flys by default

Before this it opened fine.
Comment 1 Miklos Vajna 2024-06-05 08:44:44 UTC
Aha, now this loop doesn't happen, we have a crash instead. I assume that once bug 161217 is fixed, we'll again have a loop to be fixed.

Let's set this to NEW once the layout loop is happening on master. The alternative is to close this one as a duplicate of bug 161217. Thanks.
Comment 2 Commit Notification 2024-06-07 16:05:27 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/724c17602fac7476f068e6b66f30e9ef3c9f0940

tdf#161215 sw: layout: don't move into section frame on same page

It will be available in 24.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Michael Stahl 2024-06-07 17:28:52 UTC
fixed on master; it's a floating-table problem

although, the full bugdoc still has an infinite loop, but it's a different one... some empty paragraph with a floating table ...
Comment 4 Miklos Vajna 2024-06-10 06:45:23 UTC
> fixed on master; it's a floating-table problem

Oh, you got to this faster than me, thanks a lot.
Comment 5 Commit Notification 2024-06-11 12:27:11 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "libreoffice-24-2":

https://git.libreoffice.org/core/commit/13728add48675b470d596c77fd186d3654b29525

tdf#161215 sw: layout: don't move into section frame on same page

It will be available in 24.2.5.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Commit Notification 2024-06-11 15:15:39 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/48659fa6cf8b2c5e3810696cf0c9257ddb57dd4d

(related: tdf#161215) sw: layout: fix another floating table loop

It will be available in 25.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Commit Notification 2024-06-12 06:43:32 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "libreoffice-24-2":

https://git.libreoffice.org/core/commit/f38ba192a52f46a386789557fc2f2600dd2e676e

(related: tdf#161215) sw: layout: fix another floating table loop

It will be available in 24.2.5.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Commit Notification 2024-06-12 08:32:53 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "libreoffice-24-8":

https://git.libreoffice.org/core/commit/9c89e00ba4126e1bd2c98ca20c6e48bf7411a5d2

(related: tdf#161215) sw: layout: fix another floating table loop

It will be available in 24.8.0.0.beta2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Kira Tubo 2024-06-28 04:20:17 UTC
I guess this may be related to the issue freezing (looping?) issue on Windows that I mentioned in Bug 161217... 

Version: 25.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 3c91fb758a429f51b89dfe9cea088691ced6d0c1
CPU threads: 6; OS: Windows 11 X86_64 (10.0 build 22631); UI render: Skia/Raster; VCL: win
Locale: en-US (en_US); UI: en-US
Calc: CL threaded
Comment 10 stragu 2024-07-01 07:16:05 UTC
(Michael, does comment 3 still apply or was comment 6's 48659fa6cf8b2c5e3810696cf0c9257ddb57dd4d supposed to fix that?)

(In reply to Kira Tubo from comment #9)
> I guess this may be related to the issue freezing (looping?) issue on
> Windows that I mentioned in Bug 161217...

Checking with the linux-64-24.8 bibisect repo:
- at 724c17602fac7476f068e6b66f30e9ef3c9f0940~1 : frozen on load
- at 724c17602fac7476f068e6b66f30e9ef3c9f0940   : loads in a few seconds, usable

However, shortly after, right before Michael's 48659fa6cf8b2c5e3810696cf0c9257ddb57dd4d, there's Mike's 86b0f56c840f2d982a9f845e25ac54d25204ee79 that makes it hang, which I think is what you see as well, Kira.

Reported in bug 161851.
Comment 11 Michael Stahl 2024-07-01 08:35:47 UTC
comment #3 is about the minimized attachment being fixed, and comment #6 is about a document with more pages from our customer being fixed
Comment 12 Sabrina Carpenter 2024-08-08 02:20:05 UTC Comment hidden (spam)
Comment 13 Timothy324 2024-10-10 10:30:22 UTC Comment hidden (spam)