tdf#161215 sw: layout: don't move into section frame on same page

The problem is that in SwFrame::GetNextFlyLeaf() pLayLeaf is in the body
on the same page as pFlyAnchor, so the MoveSubTree() effectively removes
the pNext chain from the layout into a circular structure whose upper is
an indirect lower, causing an infinite loop later.

Change-Id: I08f96cf483205d6213d7cec7b239f750fff5d3ad
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/168529
Tested-by: Jenkins
Reviewed-by: Michael Stahl <michael.stahl@allotropia.de>